--- a/css/widget.css
+++ b/css/widget.css
@@ -1,3 +1,26 @@
-.custom-widget {
+.ol-container {
+  height: 100%;
+  width: 100%;
+}
+
+.lm-Widget.lm-Panel.jp-OutputArea-child.jp-OutputArea-executeResult{
+  height: 100%;
+  overflow: hidden;
+  flex: 1 1 auto;
+}
+
+.lm-Widget.lm-Panel.jp-OutputArea-output {
+  height: 100%;
+  overflow: hidden;
+  flex: 1 1 auto;
+}
+
+.lm-Widget.custom-widget {
   padding: 0px 2px;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  width: 100%;
+  height: 100%;
+  min-height: 400px;
 }
