fix map css+ implement HeatmapLayer

--- a/css/widget.css
+++ b/css/widget.css
@@ -1,3 +1,21 @@
-.custom-widget {
-  padding: 0px 2px;
+.lm-Widget.lm-Panel.jp-OutputArea-output.ipyopenlayer-map-container-wrapper {
+  height: 100%;
+}
+.lm-Widget.lm-Panel.jp-OutputArea-child.jp-OutputArea-executeResult.ipyopenlayer-map-container-wrapper-parent {
+  height: 100%;
+}
+
+.ol-container {
+  height: 100%;
+  width: 100%;
+}
+.jp-LinkedOutputView .jupyter-widgets.ipyopenlayer-widgets {
+  min-height: 500px;
+  height: 100%;
+}
+
+.jupyter-widgets.ipyopenlayer-widgets {
+  height: 400px;
+  overflow: hidden;
+  flex: 1 1 auto;
 }
