--- a/css/widget.css
+++ b/css/widget.css
@@ -1,8 +1,7 @@
 .ol-container {
-  width: 656px;
-  height: 501px; 
+  height: 100%;
+  width: 100%;
 }
-
 
 .lm-Widget.lm-Panel.jp-OutputArea-child.jp-OutputArea-executeResult{
   height: 100%;
