--- a/css/widget.css
+++ b/css/widget.css
@@ -1,22 +1,16 @@
+/* Dans widget.css */
 .ol-container {
   height: 100%;
   width: 100%;
 }
 
-.lm-Widget.lm-Panel.jp-OutputArea-child.jp-OutputArea-executeResult{
-  height: 100%;
+.jupyter-widgets.ipyopenlayer-widgets  {
+  height: 400px;
   overflow: hidden;
   flex: 1 1 auto;
 }
 
-.lm-Widget.lm-Panel.jp-OutputArea-output {
+.jp-LinkedOutputView .jupyter-widgets.ipyopenlayer-widgets {
+  min-height: 360px; /* Min-height nécessaire pour la sortie miroir dans jlab < 0.31.6 */
   height: 100%;
-  overflow: hidden;
-  flex: 1 1 auto;
-}
-
-.lm-Widget.custom-widget {
-  width: 100%;
-  height: 100%;
-  min-height: 500px;
 }
