--- a/css/widget.css
+++ b/css/widget.css
@@ -1,29 +1,22 @@
-.custom-widget {
-  padding: 0px 2px;
+.lm-Widget.lm-Panel.jp-OutputArea-child.jp-OutputArea-executeResult{
+  height: 100%;
 }
 .ol-container {
   height: 100%;
   width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.jp-LinkedOutputView .jupyter-widgets.ipyopenlayer-widgets {
+  min-height: 500px; 
+  height: 100%;      
 }
 
-.lm-Widget.lm-Panel.jp-OutputArea-child.jp-OutputArea-executeResult{
-  height: 100%;
-  overflow: hidden;
-  flex: 1 1 auto;
-}
-
-.lm-Widget.lm-Panel.jp-OutputArea-output {
-  height: 100%;
-  overflow: hidden;
-  flex: 1 1 auto;
-}
-
-.lm-Widget.custom-widget {
-  padding: 0px 2px;
-  display: flex;
-  flex-direction: column;
-  flex: 1 1 auto;
-  width: 100%;
-  height: 100%;
-  min-height: 400px;
+.jupyter-widgets.ipyopenlayer-widgets {
+  height: 400px;
+  overflow: hidden; 
+  flex: 1 1 auto; 
 }
